# rustfmt-shim

./: .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  README.md
src/: macros.rs  main.rs  pre_commit.rs
