[package]
name = "rustfmt-shim"
version = "0.0.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[features]
strict = []

[dependencies]
dirs = "3.0.1"
once_cell = "1.5.2"
regex = "1.4.2"
tracing = "0.1.22"
tracing-appender = "0.1.1"
tracing-subscriber = "0.2.15"

[profile.release]
lto = true
codegen-units = 1
